--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,23 +15,23 @@
 		<!-- iOS Safari -->
 		<meta name="apple-mobile-web-app-status-bar-style" content="#043762">
 		<!-- FAVICON -->
-		<link rel= "icon" href="favicon.ico" type="image/x-icon">
-		<link rel= "shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="manifest" href="manifest.json">
+		<link rel= "icon" href="/favicon.ico" type="image/x-icon">
+		<link rel= "shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="manifest" href="/manifest.json">
 
-		<link rel="stylesheet" href="css/style.css"> <!-- load customer style -->
+		<link rel="stylesheet" href="/css/style.css"> <!-- load customer style -->
 		<!-- Responsive Stylesheets -->
-		<link rel="stylesheet" media="only screen and (max-width: 768px) and (min-width: 481px)" href="css/medium.css">
-		<link rel="stylesheet" media="only screen and (max-width: 480px)" href="css/small.css">
+		<link rel="stylesheet" media="only screen and (max-width: 768px) and (min-width: 481px)" href="/css/medium.css">
+		<link rel="stylesheet" media="only screen and (max-width: 480px)" href="/css/small.css">
 		<!-- <link rel="stylesheet" href="/leaflet/leaflet.css"> -->
 		<!-- <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/> -->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<script src="vendor/aframe-v0.8.2.js"></script>
-		<script src='vendor/aframe-ar.js'></script>
-		<script src="src/gps-camera-debug.js"></script>
-		<script src="src/gps-camera-position.js"></script>
-		<script src="src/gps-camera-rotation.js"></script>
-		<script src="src/gps-entity-place.js"></script>
+		<script src="/js/vendor/aframe-v0.8.2.js"></script>
+		<script src='/js/vendor/aframe-ar.js'></script>
+		<script src="/js/src/gps-camera-debug.js"></script>
+		<script src="/js/src/gps-camera-position.js"></script>
+		<script src="/js/src/gps-camera-rotation.js"></script>
+		<script src="/js/src/gps-entity-place.js"></script>
 	</head>
 	<body style='margin: 0px; overflow: hidden;'>
 		<a-scene embedded arjs='sourceType: webcam;'>
@@ -47,7 +47,7 @@
 		//extract POI (2) and Activity (1),  bounds == coordinate of limit of map on the screen
 		async function getPA(){
 			//http://localhost:8080/poi/list?south=48.17670360195661&west=6.433224678039552&north=48.18893611339364&east=6.453266143798829&type=all&datetime=2019-01-28T00%3A35
-			let myRequest = new Request(`data/points.json`, {
+			let myRequest = new Request(`/data/points`, {
 				method: 'GET',
 				headers: new Headers({
 						"Content-Type": "application/json"
